Add markup for home page

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      src="https://kit.fontawesome.com/be8db3d534.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wbpack Exercise</title>
+    <title>Rachel's JavaScript Capstone Project</title>
   </head>
   <body>
-    <h1>Hello webpack!</h1>
+    <header>
+      <nav class="nav">
+        <!-- <img src="../assets/movie-logo.png" alt="movie movie-logo" /> -->
+        <ul class="nav-menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Likes</a></li>
+          <li><a href="#">Comments</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-section movie-section">
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="1">Comments</button>
+      </div> -->
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="2">Comments</button>
+      </div> -->
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="3">Comments</button>
+      </div> -->
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="4">Comments</button>
+      </div> -->
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="5">Comments</button>
+      </div> -->
+      <!-- <div class="single-movie">
+        <img src="" alt="" class="image-pic" />
+        <div class="desc">
+          <p class="movie-title">Space 1</p>
+          <div class="likes">
+            <i class="fa-sharp fa-regular fa-heart"></i>
+            <p>5 likes</p>
+          </div>
+        </div>
+        <button class="comments-btn" id="6">Comments</button>
+      </div> -->
+    </main>
+    <footer>
+      <p class="footer-text">Created by Rachel, a student at Microverse</p>
+    </footer>
   </body>
 </html>
