Add popup section in html

--- a/src/index.html
+++ b/src/index.html
@@ -20,74 +20,8 @@
         </ul>
       </nav>
     </header>
-    <main class="main-section movie-section">
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="1">Comments</button>
-      </div> -->
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="2">Comments</button>
-      </div> -->
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="3">Comments</button>
-      </div> -->
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="4">Comments</button>
-      </div> -->
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="5">Comments</button>
-      </div> -->
-      <!-- <div class="single-movie">
-        <img src="" alt="" class="image-pic" />
-        <div class="desc">
-          <p class="movie-title">Space 1</p>
-          <div class="likes">
-            <i class="fa-sharp fa-regular fa-heart"></i>
-            <p>5 likes</p>
-          </div>
-        </div>
-        <button class="comments-btn" id="6">Comments</button>
-      </div> -->
-    </main>
+    <section class="main-section movie-section"></section>
+    <section class="popup-display"></section>
     <footer>
       <p class="footer-text">Created by Rachel, a student at Microverse</p>
     </footer>
