--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <nav class="nav">
         <!-- <img src="../assets/movie-logo.png" alt="movie movie-logo" /> -->
         <ul class="nav-menu">
-          <li><a href="#">Home</a></li>
+          <li><a href="#">Shows (6)</a></li>
           <li><a href="#">Likes</a></li>
           <li><a href="#">Comments</a></li>
         </ul>
