--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,15 @@
       <nav class="nav">
         <!-- <img src="../assets/movie-logo.png" alt="movie movie-logo" /> -->
         <ul class="nav-menu">
-          <li><a href="#">Shows (6)</a></li>
+          <li>
+            <a href="#">Shows (<span class="show-count"></span>)</a>
+          </li>
           <li><a href="#">Likes</a></li>
           <li><a href="#">Comments</a></li>
         </ul>
       </nav>
     </header>
-    <section class="main-section movie-section"></section>
+    <ul class="main-section movie-section"></ul>
     <section class="popup-display"></section>
     <footer>
       <p class="footer-text">Created by Rachel, a student at Microverse</p>
