--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
   <body>
     <header>
       <nav class="nav">
-        <!-- <img src="../assets/movie-logo.png" alt="movie movie-logo" /> -->
         <ul class="nav-menu">
+          <h1 class="logo">SHOWS.com</h1>
           <li>
             <a href="#">Shows (<span class="show-count"></span>)</a>
           </li>
